--- a/config/solr.yml
+++ b/config/solr.yml
@@ -5,11 +5,12 @@
 
 development:
   url: http://127.0.0.1:8982/solr
+  timeout: 60
   
 production:
   url: http://127.0.0.1:8983/solr
-  
+  timeout: 60
 
 test:
   url: http://127.0.0.1:8981/solr
-
+  timeout: 60
